--- a/styles/main.css
+++ b/styles/main.css
@@ -421,295 +421,15 @@ button[aria-label]::before {
   content: "";
 }
 
-.icon {
-  display: inline-flex;
-  align-items: center;
-  column-gap: 0.625rem;
-}
-.icon::after {
-  --size: 1.5rem;
-  width: var(--size);
-  aspect-ratio: 1;
-  content: "";
-  flex-shrink: 0;
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-@media (width <= 90.06125rem) {
-  .icon::after {
-    --size: 1.25rem;
-  }
-}
-.icon--yellow-arrow::after {
-  background-image: url("../../icons/arrow-top-right_yellow.svg");
-}
-
-.button {
-  display: inline-flex;
+.container {
+  display: flex;
   justify-content: center;
-  padding: 1.125rem 1.5rem;
-  font-size: 1.125rem;
-  color: var(--color-gray-60);
-  background-color: var(--color-dark);
-  white-space: nowrap;
-  border: var(--border);
-  border-radius: 0.75rem;
-}
-@media (width <= 90.06125rem) {
-  .button {
-    padding: 0.875rem 1.25rem;
-    font-size: 0.875rem;
-    border-radius: 0.5rem;
-  }
-}
-@media (any-hover: hover) {
-  .button:hover {
-    color: var(--color-accent);
-    background-color: var(--color-dark);
-    border: var(--border);
-  }
-}
-@media (any-hover: none) {
-  .button:active {
-    color: var(--color-accent);
-    background-color: var(--color-dark);
-    border: var(--border);
-  }
-}
-.button-accent {
-  border-radius: 0.5rem;
-  padding: 0.875rem 1.25rem;
-  color: var(--color-dark);
-  background-color: var(--color-accent);
-  font-weight: 500;
-}
-
-.burger-button {
-  width: 2.125rem;
-  aspect-ratio: 1;
-  display: inline-flex;
+  align-items: center;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 0.53125rem 0.265625rem;
-  color: var(--color-light);
-  background-color: transparent;
-  border: none;
 }
-@media (any-hover: hover) {
-  .burger-button:hover {
-    color: var(--color-accent);
-  }
-}
-@media (any-hover: none) {
-  .burger-button:active {
-    color: var(--color-accent);
-  }
-}
-.burger-button.is-active .burger-button-line:first-child {
-  rotate: 45deg;
-  transform-origin: 0;
-  translate: 0.25em -0.1em;
-}
-.burger-button.is-active .burger-button-line:nth-child(2) {
-  rotate: -45deg;
-}
-.burger-button.is-active .burger-button-line:last-child {
-  width: 0;
-}
-.burger-button-line {
-  background-color: currentColor;
-  width: 100%;
-  height: 0.125rem;
-  border-radius: 1rem;
-  transition-duration: var(--transition-duration);
-}
-.burger-button-line:last-child {
-  width: 55%;
-  align-self: end;
-}
-
-.header {
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  animation-name: scrolling-header;
-  animation-fill-mode: both;
-  animation-timeline: scroll();
-  animation-range: 6.25rem 12.5rem;
-}
-@keyframes scrolling-header {
-  to {
-    box-shadow: 0 0 1.2rem var(--color-dark-40);
-  }
-}
-.header__promo {
-  padding-block: 1.25rem;
+.container .subtitle {
   text-align: center;
-  border-bottom: var(--border);
-  background-color: var(--color-dark);
-}
-@media (width <= 47.99875rem) {
-  .header__promo {
-    padding-block: 0.875rem;
-  }
-}
-.header__body {
-  padding-block: 1.5rem;
-  background-color: var(--color-dark-10);
-}
-@media (width <= 47.99875rem) {
-  .header__body {
-    padding-block: 1.25rem;
-  }
-}
-.header__body-inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 1rem;
-}
-@media (width > 47.99875rem) {
-  .header__overlay {
-    display: contents;
-  }
-}
-@media (width <= 47.99875rem) {
-  .header__overlay {
-    position: fixed;
-    inset: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 3rem;
-    padding: 1rem;
-    background-color: var(--color-dark-10);
-    transition-duration: var(--transition-duration);
-  }
-  .header__overlay:not(.is-active) {
-    opacity: 0;
-    visibility: hidden;
-    translate: 100%;
-  }
-}
-@media (width <= 47.99875rem) {
-  .header__menu {
-    margin-block: 1.25rem;
-    overflow: auto;
-  }
-}
-.header__menu-list {
-  display: flex;
-  align-items: center;
-  column-gap: 1rem;
-}
-@media (width <= 90.06125rem) {
-  .header__menu-list {
-    column-gap: 0.375rem;
-  }
-}
-@media (width <= 47.99875rem) {
-  .header__menu-list {
-    flex-direction: column;
-    row-gap: 1rem;
-  }
-}
-.header__menu-link {
-  padding: 0.875rem 1.5rem;
-  color: var(--color-gray-50);
-}
-@media (width <= 90.06125rem) {
-  .header__menu-link {
-    padding: 0.625rem 1.125rem;
-  }
-}
-@media (width <= 47.99875rem) {
-  .header__menu-link {
-    width: 100vw;
-    max-width: 18.75rem;
-    justify-content: center;
-  }
-}
-.header__menu-link.is-active {
-  font-weight: 500;
-  color: var(--color-light);
-  background-color: var(--color-dark);
-  border-radius: 0.625rem;
-  border: 1px solid var(--color-dark-20);
-  pointer-events: none;
-}
-@media (width <= 47.99875rem) {
-  .header__contact-us-link {
-    width: 100%;
-    max-width: 18.75rem;
-    align-self: center;
-  }
-}
-
-.footer {
-  border-top: var(--border);
-}
-.footer__body {
-  padding-block: clamp(2.5rem, 1.862745098rem + 2.614379085vw, 5rem);
-  border-bottom: var(--border);
-}
-.footer__menu {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  align-items: start;
-  column-gap: clamp(1.25rem, 0.2941176471rem + 3.9215686275vw, 5rem);
-}
-.footer__menu-column {
-  display: grid;
-  flex-direction: column;
-  row-gap: clamp(1rem, 0.681372549rem + 1.3071895425vw, 2.25rem);
-}
-.footer__menu-main-link {
-  font-weight: 400;
-  color: var(--color-light);
-}
-.footer__menu-list {
-  display: flex;
-  flex-direction: column;
-  row-gap: clamp(0.5rem, 0.3406862745rem + 0.6535947712vw, 1.125rem);
-}
-.footer__menu-item .badge {
-  border: var(--border);
-  padding: 0.25rem 0.75rem;
-  border-radius: 0.375rem;
-  margin-left: 0.5rem;
-  color: var(--color-light);
-}
-.footer__menu-link:where(.button) {
-  padding: 0.625rem 1rem;
-}
-.footer__menu-link:where(.button) .icon--yellow-arrow::after {
-  --size: 1.25rem;
-  width: var(--size);
-  aspect-ratio: 1;
-}
-.footer__extra {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-block: 2.5rem;
-}
-.footer__extra-menu-list {
-  display: flex;
-  column-gap: 1.375rem;
-}
-.footer__extra-menu-item:first-child::after {
-  content: "";
-  height: 1.4375rem;
-  width: 12px;
-  background-color: var(--color-dark-15);
-}
-.footer__extra .soc1als__list {
-  display: flex;
-  column-gap: 1.25rem;
-}
-header {
-  display: none !important;
+  font-size: clamp(0.875rem, 0.7156862745rem + 0.6535947712vw, 1.5rem);
 }
 
 /*# sourceMappingURL=main.css.map */
